fix: adjust font size for select, textarea, and input elements on iOS devices

--- a/src/globals.css
+++ b/src/globals.css
@@ -153,3 +153,12 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+/* Fix for iOS */
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
